# A_Search_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  PERFORMANCE_OPTIMIZATION_GUIDE.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PERFORMANCE_RECOMMENDATIONS.md  PROJECT_COMPLETION_STATUS.md  README.md  SEARCH_ENGINE_OPTIMIZATION_COMPLETE.md  SPEED_OPTIMIZATION_PLAN.md  deploy.sh  docker-compose.yml  fix_data_pipeline.py  fix_data_pipeline_simple.py  performance_demo.py  process_data.py  quick_test.py  start_all_services.sh  test_search_engine.py  test_url_filtering.py
ai_search/: start_services.sh
crawler/: CMakeLists.txt  Dockerfile  MODULARIZATION_SUMMARY.md  README.md
crawler/cache/rocksdb_conditional_get_cache/: 000057.sst  IDENTITY  LOG  LOG.old.1753772756747873  LOG.old.1753773751786399  LOG.old.1753773798948620  LOG.old.1753784795247356  LOG.old.1753785920800897  LOG.old.1753786179244258  LOG.old.1753787255800133  LOG.old.1753799919227586  MANIFEST-000054  OPTIONS-000056
crawler/cmake/: IncludeGitSubmodule.cmake
crawler/config/: domain_configs.json  emergency_seeds.json  excluded_extensions.json  excluded_patterns.json  feeds.json  high_priority_domains.json  seeds.json  sitemaps.json
crawler/config/cache/: conditional_get_cache.txt
crawler/data/disk_queue/: shard_0.txt  shard_11.txt  shard_14.txt  shard_7.txt
crawler/data/processed/: hybrid_crawl_log.csv  hybrid_crawl_metadata.db
crawler/data/raw/: batch_20250710_113051_0.json  batch_20250710_113053_1.json  batch_20250710_113053_2.json  batch_20250710_113054_3.json  batch_20250710_113054_4.json  batch_20250710_113055_5.json  batch_20250710_113055_6.json  batch_20250710_113055_7.json  batch_20250710_113056_10.json  batch_20250710_113056_11.json  batch_20250710_113056_8.json  batch_20250710_113056_9.json  batch_20250710_113057_12.json  batch_20250710_113058_13.json  batch_20250710_113058_14.json  batch_20250710_113058_15.json  batch_20250710_113058_16.json  batch_20250710_113059_17.json  batch_20250710_113100_18.json  batch_20250710_113100_19.json  batch_20250710_113100_20.json  batch_20250710_113100_21.json  batch_20250710_113107_0.json  batch_20250710_113107_1.json  batch_20250710_113108_2.json  batch_20250710_113108_3.json  batch_20250710_113108_4.json  batch_20250710_113110_5.json  batch_20250710_113110_6.json  batch_20250710_113110_7.json  batch_20250710_113110_8.json  batch_20250710_113111_10.json  batch_20250710_113111_9.json  batch_20250710_113112_11.json  batch_20250710_113112_12.json  batch_20250710_113112_13.json  batch_20250710_113112_14.json  batch_20250710_113112_15.json  batch_20250710_113117_16.json  batch_20250710_113118_17.json  (+554 more)
crawler/docs/: CRAWLER_PERFORMANCE_ANALYSIS_200s.md  CRITICAL_OPTIMIZATIONS_IMPLEMENTED.md  DOCUMENTATION_RULES.md  GOOGLE_DRIVE_SYNC.md  IMPLEMENTATION_PLAN.md  INTEGRATION_SUMMARY.md  QUEUE_OPTIMIZATION_IMPLEMENTATION.md  ULTRA_PARSER_URL_FILTERING_ENHANCEMENT.md
crawler/scripts/: add_submodule.sh  build.sh  install_deps.sh  setup_gdrive_mount.sh  sync_existing_files.sh  test.sh  test_sync.sh
crawler/src/: constants.h  crawler_main.cpp  crawler_main.h  language_detector.h  lock_free_url_frontier.h  ultra_parser.cpp  ultra_parser.h  utils.cpp  utils.h
crawler/src/config/: config_loader.cpp  config_loader.h  domain_blacklist.cpp  domain_blacklist.h  domain_config.cpp  domain_config.h
crawler/src/core/: constants.h  crawler_core.cpp  crawler_core.h  crawler_main.cpp  crawler_main.h  crawler_main_new.cpp  crawler_modes.cpp  crawler_modes.h  crawler_monitoring.cpp  crawler_monitoring.h  crawler_workers.cpp  crawler_workers.h
crawler/src/monitoring/: crawl_logger.cpp  crawl_logger.h  error_tracker.cpp  error_tracker.h  performance_monitor.cpp  performance_monitor.h
crawler/src/network/: conditional_get.cpp  conditional_get.h  connection_pool.cpp  connection_pool.h  http_client.cpp  http_client.h  rate_limiter.cpp  rate_limiter.h  robots_txt_cache.cpp  robots_txt_cache.h
crawler/src/parsing/: content_filter.cpp  content_filter.h  html_document.cpp  html_document.h  language_detector.cpp  language_detector.h  rss_poller.cpp  rss_poller.h  sitemap_parser.cpp  sitemap_parser.h  snippet_extractor.cpp  snippet_extractor.h  ultra_parser.cpp  ultra_parser.h  url_info.h
crawler/src/queue/: html_processing_queue.cpp  html_processing_queue.h  sharded_disk_queue.cpp  sharded_disk_queue.h  smart_frontier.cpp  smart_frontier.h  work_stealing_queue.cpp  work_stealing_queue.h
crawler/src/storage/: content_hash.h  crawl_metadata.cpp  crawl_metadata.h  enhanced_storage.cpp  enriched_storage.h  gdrive_mount_manager.cpp  gdrive_mount_manager.h  gdrive_mount_storage.cpp  gdrive_mount_storage.h
crawler/src/utils/: time_utils.h  url_normalizer.cpp  url_normalizer.h  url_normalizer_regex_free.cpp  utility_functions.cpp  utility_functions.h  utils.cpp  utils.h
data_pipeline/: __init__.py  cleaner.py  config.py  enhanced_metadata_extractor.py  extractor.py  file_reader.py  hybrid_processor.py  indexer.py  manage_ism.py  processor.py  production_test.py  profile_output.pstats  profile_worker.py  requirements.txt  run_pipeline.py  run_production_pipeline_clean.py  run_quality_analysis.py  scorer.py  show_processed_data.py  stop_words.txt
data_pipeline/rust_core_processor/: Cargo.toml
data_pipeline/rust_core_processor/src/: cleaner.rs  extractor.rs  language_detector.rs  lib.rs  scorer.rs  types.rs
data_pipeline/rust_core_processor/src/extractor/: main_content_extractor.rs  metadata_extractor.rs  mod.rs  optimized.rs
docs/: AI_BACKEND_INTEGRATION_COMPLETE.md  AI_COMMUNICATION_OPTIMIZATION_PLAN.md  AI_INTELLIGENCE_HUB_IMPLEMENTATION.md  BACKEND_ENHANCEMENT_SUMMARY.md  CLEANUP_SUMMARY.md  DEEP_DIVE_COMPARISON.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  ENHANCED_METADATA_EXTRACTION.md  ENHANCED_SEARCH_FEATURES.md  FINAL_CLEANUP_COMPLETE.md  FRONTEND_BACKEND_AI_INTEGRATION_COMPLETE.md  HYBRID_CRAWLER_DOCUMENTATION.md  HYBRID_SUCCESS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_RESULTS.md  IMPROVEMENT_PLAN.md  INDEXING_REFACTORING_COMPLETE.md  ISM_IMPLEMENTATION.md  Plan.md  (+11 more)
(+158 files in other folders)
