[package]
name = "rust_core_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tl = "0.7"  # Fast HTML parser
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
once_cell = "1.19"
rayon = "1.8"  # For parallel processing
unicode-segmentation = "1.10"
whatlang = "0.16"  # Ultra-fast language detection
chrono = { version = "0.4", features = ["serde"] }  # For proper date parsing
rust-stemmers = "1.2.0"
